import 'react-native';
import React from 'react';
import { shallow } from 'enzyme';

import Radio from '../Radio';

describe('Radio', () => {
    it('renders correctly true', () => {
        const render = shallow(<Radio input={{ value: true }} />);
        expect(render).toMatchSnapshot();
    });
    it('renders correctly false', () => {
        const render = shallow(<Radio input={{ value: false }} />);
        expect(render).toMatchSnapshot();
    });
});
