// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly false 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
  value={false}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "paddingHorizontal": 15,
        "paddingVertical": 30,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderColor": "#000",
            "borderRadius": 11.5,
            "borderWidth": 0.5,
            "height": 23,
            "justifyContent": "center",
            "marginRight": 15,
            "overflow": "hidden",
            "width": 23,
          },
          false,
        ]
      }
    >
      <Icon
        allowFontScaling={false}
        color="#fff"
        name="check"
        size={18}
        style={
          Array [
            undefined,
            false,
          ]
        }
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 16,
        }
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`Radio renders correctly true 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
  value={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "paddingHorizontal": 15,
        "paddingVertical": 30,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderColor": "#000",
            "borderRadius": 11.5,
            "borderWidth": 0.5,
            "height": 23,
            "justifyContent": "center",
            "marginRight": 15,
            "overflow": "hidden",
            "width": 23,
          },
          Object {
            "backgroundColor": "black",
          },
        ]
      }
    >
      <Icon
        allowFontScaling={false}
        color="#fff"
        name="check"
        size={18}
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 16,
        }
      }
    />
  </View>
</TouchableOpacity>
`;
